# AOC

./: AdventOfCode.cpp  AdventOfCode.h  CMakeLists.txt
2022/: AdventOfCode.cpp  CMakeLists.txt
2022/src/: DayFive.cpp  DayFour.cpp  DayOne.cpp  DaySix.cpp  DayThree.cpp  DayTwo.cpp
2024/: AdventOfCode.cpp  CMakeLists.txt
2024/include/: Day.h
2024/src/: DayOne.cpp  DayTwo.cpp
include/: Day.h  DayOne.h  DayThree.h  DayTwo.h
src/: DayFour.cpp  DayOne.cpp  DayThree.cpp  DayTwo.cpp
